# kindly

./: .copier-answers.yml  .coveragerc  .gitignore  .python-version  Makefile  README.md  constraints.txt  init_env.sh  kindly.pyl  kindly_aliases.pyl  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: pypackage.yml
src/kindly/: _cli.py  _greeting_provider.py  api.py
tests/: test_kindly.py
