[metadata]
name = kindly
version = attr: kindly._version.version
description = A front end for project maintenance tools
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    OSI Approved :: MIT License

[options]
install_requires =
    more-itertools
package_dir=
    =src

[options.entry_points]
console_scripts =
    kindly = kindly.__main__:main

[options.packages.find]
where = src

[options.package_data]
kindly = py.typed
